Revise title and meta description in index.html
Updated the title and description meta tags for clarity and consistency. Adjusted styles and content for the landing page.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Unimplicit — Making the implicit explicit</title>
-  <meta name="description" content="Unimplicit makes the implicit explicit—clearer instructions, fewer misunderstandings, better outcomes." />
+  <title>Unimplicit: making implicit work explicit.</title>
+  <meta name="description" content="Unimplicit: making implicit work explicit. Clearer instructions, fewer misunderstandings, better outcomes." />
   <style>
     :root{
       --bg1:#0b1020;
@@ -486,3 +486,4 @@
   </script>
 </body>
 </html>
+
